--- a/openshift/app01/custom.conf
+++ b/openshift/app01/custom.conf
@@ -1,7 +1,9 @@
 
+# ***** custom error page *****
+
 ErrorDocument 502 /502.html
 
-# tune
+# ***** tune ******
 
 MinSpareServers 1
 MaxSpareServers 2
@@ -10,7 +12,7 @@ KeepAlive On
 Timeout 60
 LanguagePriority ja en
 
-# log
+# ***** log *****
 
 DeflateFilterNote ratio
 
@@ -26,22 +28,22 @@ SetEnvIf Request_URI "\.gif$" no_log_2
 SetEnvIf Request_URI "\.png$" no_log_2
 
 CustomLog \
- "|/usr/sbin/rotatelogs -L __APACHE_DIR__logs/access_log __APACHE_DIR__logs/access_log.%w 86400 540" combined
+ "|/usr/sbin/rotatelogs -L ${OPENSHIFT_DATA_DIR}/apache/logs/access_log ${OPENSHIFT_DATA_DIR}/apache/logs/access_log.%w 86400 540" combined
 CustomLog \
- "|/usr/sbin/rotatelogs -L __APACHE_DIR__logs/access_remoteip_log __APACHE_DIR__logs/access_remoteip_log.%w 86400 540" \
+ "|/usr/sbin/rotatelogs -L ${OPENSHIFT_DATA_DIR}/apache/logs/access_remoteip_log ${OPENSHIFT_DATA_DIR}/apache/logs/access_remoteip_log.%w 86400 540" \
  remoteip env=!no_log_1
 CustomLog \
- "|/usr/sbin/rotatelogs -L __APACHE_DIR__logs/access_deflate_log __APACHE_DIR__logs/access_deflate_log.%w 86400 540" \
+ "|/usr/sbin/rotatelogs -L ${OPENSHIFT_DATA_DIR}/apache/logs/access_deflate_log ${OPENSHIFT_DATA_DIR}/apache/logs/access_deflate_log.%w 86400 540" \
  deflate env=!no_log_2
 
 ErrorLog \
- "|/usr/sbin/rotatelogs -L __APACHE_DIR__logs/error_log __APACHE_DIR__logs/error_log.%w 86400 540"
+ "|/usr/sbin/rotatelogs -L ${OPENSHIFT_DATA_DIR}/apache/logs/error_log ${OPENSHIFT_DATA_DIR}/apache/logs/error_log.%w 86400 540"
 
-# indexes
+# ***** indexes *****
 
 IndexOptions +NameWidth=*
 
-# security
+# ***** security *****
 
 ServerTokens Prod
 
@@ -55,7 +57,7 @@ Header always unset X-Powered-By
 Header always unset X-Rack-Cache
 Header always unset X-Runtime
 
-# php
+# ***** php *****
 
 AddType application/x-httpd-php .php
 
@@ -66,7 +68,7 @@ AddType application/x-httpd-php .php
 # Header unset x-powered-by
 # Header set server Apache
 
-# deflate
+# ***** deflate *****
 
 <Location />
     SetOutputFilter DEFLATE
@@ -96,34 +98,25 @@ ExpiresActive On
     ExpiresByType image/png "access plus 10 minutes"
 </Location>
 
-# force ssl
+# ***** force ssl *****
 
-<IfModule mod_rewrite.c>
-    RewriteEngine on
-    RewriteLog \
-     "|/usr/sbin/rotatelogs -L __APACHE_DIR__logs/rewrite_log __APACHE_DIR__logs/rewrite_log.%w 86400 540"
-    RewriteLogLevel 1
-    RewriteCond %{HTTP:X-Forwarded-Proto} !https
-    RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
-</IfModule>
+RewriteEngine on
+RewriteLog \
+ "|/usr/sbin/rotatelogs -L ${OPENSHIFT_DATA_DIR}/apache/logs/rewrite_log ${OPENSHIFT_DATA_DIR}/apache/logs/rewrite_log.%w 86400 540"
+RewriteLogLevel 1
+RewriteCond %{HTTP:X-Forwarded-Proto} !https
+RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
 
-# delete etag
+# ***** delete etag *****
 
-<ifModule mod_headers.c>
-    Header unset ETag
-</ifModule>
-
+Header unset ETag
 FileETag None
 
-# memory cache
+# ***** memory cache *****
 
-<IfModule mod_cache.c>
-    LoadModule mem_cache_module modules/mod_mem_cache.so
-    <IfModule mod_mem_cache.c>
-        CacheEnable mem /
-        MCacheSize 4096
-        MCacheMaxObjectCount 100
-        MCacheMinObjectSize 1
-        MCacheMaxObjectSize 2048
-    </IfModule>
-</IfModule>
+LoadModule mem_cache_module modules/mod_mem_cache.so
+CacheEnable mem /
+MCacheSize 4096
+MCacheMaxObjectCount 100
+MCacheMinObjectSize 1
+MCacheMaxObjectSize 2048
