--- a/openshift/app01/custom.conf
+++ b/openshift/app01/custom.conf
@@ -121,4 +121,12 @@ MCacheMaxObjectCount 100
 MCacheMinObjectSize 1
 MCacheMaxObjectSize 2048
 
+# ***** caldavzap *****
+
+<Directory ${OPENSHIFT_DATA_DIR}/apache/htdocs/caldavzap/>
+    AllowOverride FileInfo Limit
+    Order allow,deny
+    Allow from all
+</Directory>
+
 # step 14
