--- a/openshift/app01/custom.conf
+++ b/openshift/app01/custom.conf
@@ -129,4 +129,18 @@ MCacheMaxObjectSize 2048
     Allow from all
 </Directory>
 
+# ***** delegate *****
+
+ProxyRequests Off
+
+<Location /ml>
+    SetEnv proxy-initial-not-pooled 1
+</Location>
+
+ProxyPass /mail/ http://${OPENSHIFT_DIY_IP}:30080/mail/ retry=1
+ProxyPassReverse /mail/ http:///${OPENSHIFT_DIY_IP}:30080/mail/
+ProxyPass /ml/ http:///${OPENSHIFT_DIY_IP}:30080/mail/+pop.__DELEGATE_EMAIL_ACCOUNT__.__DELEGATE_POP_SERVER__/ retry=1
+ProxyPassReverse /ml/ http:///${OPENSHIFT_DIY_IP}:30080/mail/+pop.__DELEGATE_EMAIL_ACCOUNT__.__DELEGATE_POP_SERVER__/
+ProxyMaxForwards 10
+
 # step 14
