--- a/openshift/app01/custom.conf
+++ b/openshift/app01/custom.conf
@@ -65,9 +65,6 @@ AddType application/x-httpd-php .php
     SetHandler application/x-httpd-php
 </FilesMatch>
 
-# Header unset x-powered-by
-# Header set server Apache
-
 # ***** deflate *****
 
 <Location />
@@ -77,6 +74,8 @@ AddType application/x-httpd-php .php
 </Location>
 
 AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css application/javascript
+
+# ***** cache *****
 
 ExpiresActive On
 
@@ -133,7 +132,10 @@ MCacheMaxObjectSize 2048
 
 ProxyRequests Off
 
-<Location /ml>
+<Location /ml/>
+    SetEnv proxy-initial-not-pooled 1
+</Location>
+<Location /mail/>
     SetEnv proxy-initial-not-pooled 1
 </Location>
 
