--- a/openshift/app07/httpd.conf
+++ b/openshift/app07/httpd.conf
@@ -13,12 +13,12 @@ LoadModule auth_basic_module modules/mod_auth_basic.so
 #LoadModule auth_digest_module modules/mod_auth_digest.so
 LoadModule reqtimeout_module modules/mod_reqtimeout.so
 LoadModule filter_module modules/mod_filter.so
-#LoadModule deflate_module modules/mod_deflate.so
+LoadModule deflate_module modules/mod_deflate.so
 LoadModule mime_module modules/mod_mime.so
 LoadModule log_config_module modules/mod_log_config.so
 #LoadModule logio_module modules/mod_logio.so
 LoadModule env_module modules/mod_env.so
-#LoadModule expires_module modules/mod_expires.so
+LoadModule expires_module modules/mod_expires.so
 LoadModule headers_module modules/mod_headers.so
 LoadModule setenvif_module modules/mod_setenvif.so
 #LoadModule proxy_module modules/mod_proxy.so
@@ -28,7 +28,7 @@ LoadModule setenvif_module modules/mod_setenvif.so
 LoadModule autoindex_module modules/mod_autoindex.so
 LoadModule dir_module modules/mod_dir.so
 LoadModule alias_module modules/mod_alias.so
-#LoadModule rewrite_module modules/mod_rewrite.so
+LoadModule rewrite_module modules/mod_rewrite.so
 #LoadModule php7_module modules/libphp7.so
 
 ServerAdmin dummy@dummy.local
