--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -32,14 +32,52 @@ LogLevel warn
 
 LogFormat "%v:%p %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" vhost_combined
 LogFormat "%h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
-LogFormat "%h %l %u %t \"%r\" %>s %O" common
-LogFormat "%{Referer}i -> %U" referer
-LogFormat "%{User-agent}i" agent
+# LogFormat "%h %l %u %t \"%r\" %>s %O" common
+# LogFormat "%{Referer}i -> %U" referer
+# LogFormat "%{User-agent}i" agent
+
+DeflateCompressionLevel 1
+SetOutputFilter DEFLATE
+SetEnvIfNoCase Request_URI \.(?:gif|jpe?g|png|ico)$ no-gzip dont-vary
+Header append Vary User-Agent env=!dont-vary
 
 # ★
 # RewriteEngine On
 # RewriteCond %{HTTPS} off
 # RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
+
+DirectoryIndex index.html index.php
+TypesConfig /etc/mime.types
+
+AddLanguage en .en
+AddLanguage ja .ja
+
+AddCharset us-ascii	.ascii .us-ascii
+AddCharset ISO-2022-JP .iso2022-jp .jis
+AddCharset UTF-8	   .utf8
+AddCharset euc-jp	  .euc-jp
+AddCharset shift_jis   .shift_jis .sjis
+
+StartServers 5
+MinSpareServers 5
+MaxSpareServers 10
+MaxRequestWorkers 150
+MaxConnectionsPerChild 0
+
+LanguagePriority en ja	
+
+CustomLog ${APACHE_LOG_DIR}/other_vhosts_access.log vhost_combined
+
+<FilesMatch ".+\.ph(p[3457]?|t|tml)$">
+    SetHandler application/x-httpd-php
+</FilesMatch>
+<FilesMatch ".+\.phps$">
+    SetHandler application/x-httpd-php-source
+    Require all denied
+</FilesMatch>
+<FilesMatch "^\.ph(p[3457]?|t|tml|ps)$">
+    Require all denied
+</FilesMatch>
 
 <VirtualHost *:10080>
   ServerAdmin webmaster@localhost
@@ -57,6 +95,4 @@ LogFormat "%{User-agent}i" agent
   SSLCertificateFile /etc/apache2/server.crt
   SSLCertificateKeyFile /etc/apache2/server.key
 </VirtualHost>
-
-  
 
