--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -9,6 +9,9 @@ KeepAliveTimeout 5
 User ${APACHE_RUN_USER}
 Group ${APACHE_RUN_GROUP}
 HostnameLookups Off
+ServerTokens Prod
+ServerSignature Off
+TraceEnable Off
 
 ErrorLog ${APACHE_LOG_DIR}/error.log
 LogLevel warn
@@ -85,6 +88,14 @@ CustomLog ${APACHE_LOG_DIR}/other_vhosts_access.log vhost_combined
   ErrorLog ${APACHE_LOG_DIR}/error.log
   CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
+
+SSLRandomSeed startup builtin
+SSLRandomSeed connect builtin
+SSLSessionCache		shmcb:${APACHE_RUN_DIR}/ssl_scache(512000)
+SSLSessionCacheTimeout  300
+SSLCipherSuite HIGH:!aNULL
+#SSLProtocol all -SSLv3
+SSLProtocol TLSv1.2
 
 <VirtualHost _default_:443>
   ServerAdmin webmaster@localhost
