--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -2,6 +2,8 @@
 
 DefaultRuntimeDir ${APACHE_RUN_DIR}
 PidFile ${APACHE_PID_FILE}
+Listen 0.0.0.0:10080
+Listen 0.0.0.0:443
 Timeout 300
 KeepAlive On
 MaxKeepAliveRequests 100
