--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -14,6 +14,7 @@ HostnameLookups Off
 ServerTokens Prod
 ServerSignature Off
 TraceEnable Off
+ServerAdmin admin@localhost
 
 ErrorLog ${APACHE_LOG_DIR}/error.log
 LogLevel warn
@@ -85,7 +86,7 @@ CustomLog ${APACHE_LOG_DIR}/other_vhosts_access.log vhost_combined
 </FilesMatch>
 
 <VirtualHost *:10080>
-  ServerAdmin webmaster@localhost
+  # ServerAdmin admin@localhost
   DocumentRoot /var/www/10080
   ErrorLog ${APACHE_LOG_DIR}/error.log
   CustomLog ${APACHE_LOG_DIR}/access.log combined
@@ -100,7 +101,7 @@ SSLCipherSuite HIGH:!aNULL
 SSLProtocol TLSv1.2
 
 <VirtualHost _default_:443>
-  ServerAdmin webmaster@localhost
+  # ServerAdmin admin@localhost
   DocumentRoot /var/www/443
   ErrorLog ${APACHE_LOG_DIR}/error.log
   CustomLog ${APACHE_LOG_DIR}/access.log combined
