--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -2,6 +2,7 @@
 
 DefaultRuntimeDir ${APACHE_RUN_DIR}
 PidFile ${APACHE_PID_FILE}
+Listen 0.0.0.0:80
 Listen 0.0.0.0:10080
 Listen 0.0.0.0:443
 Timeout 300
@@ -84,6 +85,13 @@ CustomLog ${APACHE_LOG_DIR}/other_vhosts_access.log vhost_combined
 <FilesMatch "^\.ph(p[3457]?|t|tml|ps)$">
     Require all denied
 </FilesMatch>
+
+<VirtualHost *:80>
+  # ServerAdmin admin@localhost
+  DocumentRoot /var/www/80
+  ErrorLog ${APACHE_LOG_DIR}/error.log
+  CustomLog ${APACHE_LOG_DIR}/access.log combined
+</VirtualHost>
 
 <VirtualHost *:10080>
   # ServerAdmin admin@localhost
