--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -18,6 +18,8 @@ TraceEnable Off
 ServerAdmin admin@localhost
 
 ErrorLog ${APACHE_LOG_DIR}/error.log
+# ErrorLog  "|/usr/bin/logger -p local6.info -t httpd_error"
+
 LogLevel warn
 
 <Directory />
@@ -91,6 +93,7 @@ CustomLog ${APACHE_LOG_DIR}/other_vhosts_access.log vhost_combined
   DocumentRoot /var/www/80
   ErrorLog ${APACHE_LOG_DIR}/error.log
   CustomLog ${APACHE_LOG_DIR}/access.log combined
+  # CustomLog "|/usr/bin/logger -p local5.info -t httpd_access_80" combined
 </VirtualHost>
 
 <VirtualHost *:10080>
