--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -35,9 +35,9 @@ LogLevel warn
 </Directory>
 
 # AccessFileName .htaccess
-# <FilesMatch "^\.ht">
-# 	Require all denied
-# </FilesMatch>
+<FilesMatch "^\.ht">
+	Require all denied
+</FilesMatch>
 
 LogFormat "%v:%p %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" vhost_combined
 LogFormat "%h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
