--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -16,6 +16,7 @@ ServerTokens Prod
 ServerSignature Off
 TraceEnable Off
 ServerAdmin admin@localhost
+DefaultType text/plain
 
 ErrorLog ${APACHE_LOG_DIR}/error.log
 # ErrorLog  "|/usr/bin/logger -p local6.info -t httpd_error"
@@ -56,6 +57,7 @@ Header append Vary User-Agent env=!dont-vary
 # RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
 
 DirectoryIndex index.html index.php
+# ★
 TypesConfig /etc/mime.types
 
 AddLanguage en .en
