--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -90,6 +90,9 @@ CustomLog ${APACHE_LOG_DIR}/other_vhosts_access.log vhost_combined
     Require all denied
 </FilesMatch>
 
+# ★
+# ErrorDocument 502 /502.html
+
 <VirtualHost *:80>
   # ServerAdmin admin@localhost
   DocumentRoot /var/www/80
