--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -17,6 +17,7 @@ ServerSignature Off
 TraceEnable Off
 ServerAdmin admin@localhost
 DefaultType text/plain
+UseCanonicalName Off
 
 ErrorLog ${APACHE_LOG_DIR}/error.log
 # ErrorLog  "|/usr/bin/logger -p local6.info -t httpd_error"
