--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -94,6 +94,14 @@ CustomLog ${APACHE_LOG_DIR}/other_vhosts_access.log vhost_combined
 # ★
 # ErrorDocument 502 /502.html
 
+Header add Server Apache
+Header always unset X-Powered-By
+Header always unset X-Rack-Cache
+Header always unset X-Runtime
+
+Header unset ETag
+FileETag None
+
 <VirtualHost *:80>
   # ServerAdmin admin@localhost
   DocumentRoot /var/www/80
@@ -127,3 +135,8 @@ SSLProtocol TLSv1.2
   SSLCertificateKeyFile /etc/apache2/server.key
 </VirtualHost>
 
+# ProxyPass /mail/ http://192.168.1.21:30080/mail/ retry=1
+# ProxyPassReverse /mail/ http://192.168.1.21:30080/mail/
+# ProxyPass /ml/ http://192.168.1.21:30080/mail/+pop.__DELEGATE_EMAIL_ACCOUNT__.__DELEGATE_POP_SERVER__/ retry=1
+# ProxyPassReverse /ml/ http://192.168.1.21:30080/mail/+pop.__DELEGATE_EMAIL_ACCOUNT__.__DELEGATE_POP_SERVER__/
+# ProxyMaxForwards 10
