--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -19,6 +19,9 @@ ServerAdmin admin@localhost
 DefaultType text/plain
 UseCanonicalName Off
 
+# ★
+# LoadModule xml2enc_module /usr/lib/apache2/modules/mod_xml2enc.so
+
 ErrorLog ${APACHE_LOG_DIR}/error.log
 # ErrorLog  "|/usr/bin/logger -p local6.info -t httpd_error"
 
