--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -19,8 +19,17 @@ ServerAdmin admin@localhost
 DefaultType text/plain
 UseCanonicalName Off
 
-# ★
-# LoadModule xml2enc_module /usr/lib/apache2/modules/mod_xml2enc.so
+LoadModule mpm_prefork_module /usr/lib/apache2/modules/mod_mpm_prefork.so
+LoadModule authz_core_module /usr/lib/apache2/modules/mod_authz_core.so
+LoadModule filter_module /usr/lib/apache2/modules/mod_filter.so
+LoadModule deflate_module /usr/lib/apache2/modules/mod_deflate.so
+LoadModule setenvif_module /usr/lib/apache2/modules/mod_setenvif.so
+LoadModule headers_module /usr/lib/apache2/modules/mod_headers.so
+LoadModule dir_module /usr/lib/apache2/modules/mod_dir.so
+LoadModule mime_module /usr/lib/apache2/modules/mod_mime.so
+LoadModule negotiation_module /usr/lib/apache2/modules/mod_negotiation.so
+LoadModule socache_shmcb_module /usr/lib/apache2/modules/mod_socache_shmcb.so
+LoadModule ssl_module /usr/lib/apache2/modules/mod_ssl.so
 
 ErrorLog ${APACHE_LOG_DIR}/error.log
 # ErrorLog  "|/usr/bin/logger -p local6.info -t httpd_error"
