--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -16,8 +16,8 @@ ServerTokens Prod
 ServerSignature Off
 TraceEnable Off
 ServerAdmin admin@localhost
-DefaultType text/plain
 UseCanonicalName Off
+ServerName localhost
 
 LoadModule mpm_prefork_module /usr/lib/apache2/modules/mod_mpm_prefork.so
 LoadModule authz_core_module /usr/lib/apache2/modules/mod_authz_core.so
