--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -30,6 +30,7 @@ LoadModule mime_module /usr/lib/apache2/modules/mod_mime.so
 LoadModule negotiation_module /usr/lib/apache2/modules/mod_negotiation.so
 LoadModule socache_shmcb_module /usr/lib/apache2/modules/mod_socache_shmcb.so
 LoadModule ssl_module /usr/lib/apache2/modules/mod_ssl.so
+LoadModule php7_module /usr/lib/apache2/modules/libphp7.0.so
 
 ErrorLog ${APACHE_LOG_DIR}/error.log
 # ErrorLog  "|/usr/bin/logger -p local6.info -t httpd_error"
