--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -105,6 +105,10 @@ CustomLog ${APACHE_LOG_DIR}/other_vhosts_access.log vhost_combined
 
 # ★
 # ErrorDocument 502 /502.html
+ErrorDocument 404 "404a"
+ErrorDocument 500 "500a"
+ErrorDocument 502 "502a"
+ErrorDocument 503 "503a"
 
 Header add Server Apache
 Header always unset X-Powered-By
