--- a/memo/20171121.conf
+++ b/memo/20171121.conf
@@ -38,20 +38,20 @@ ErrorLog ${APACHE_LOG_DIR}/error.log
 LogLevel warn
 
 <Directory />
-        Options FollowSymLinks
-        AllowOverride None
-        Require all denied
+  Options FollowSymLinks
+  AllowOverride None
+  Require all denied
 </Directory>
 
 <Directory /var/www/>
-        Options Indexes FollowSymLinks
-        AllowOverride None
-        Require all granted
+  Options Indexes FollowSymLinks
+  AllowOverride None
+  Require all granted
 </Directory>
 
 # AccessFileName .htaccess
 <FilesMatch "^\.ht">
-        Require all denied
+  Require all denied
 </FilesMatch>
 
 LogFormat "%v:%p %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" vhost_combined
@@ -77,11 +77,11 @@ TypesConfig /etc/mime.types
 AddLanguage en .en
 AddLanguage ja .ja
 
-AddCharset us-ascii     .ascii .us-ascii
+AddCharset us-ascii .ascii .us-ascii
 AddCharset ISO-2022-JP .iso2022-jp .jis
-AddCharset UTF-8           .utf8
-AddCharset euc-jp         .euc-jp
-AddCharset shift_jis   .shift_jis .sjis
+AddCharset UTF-8 .utf8
+AddCharset euc-jp .euc-jp
+AddCharset shift_jis .shift_jis .sjis
 
 StartServers 1
 MinSpareServers 1
@@ -93,22 +93,27 @@ LanguagePriority en ja
 
 CustomLog ${APACHE_LOG_DIR}/other_vhosts_access.log vhost_combined
 
-<FilesMatch ".+\.ph(p[3457]?|t|tml)$">
-    SetHandler application/x-httpd-php
-</FilesMatch>
-<FilesMatch ".+\.phps$">
-    SetHandler application/x-httpd-php-source
-    Require all denied
-</FilesMatch>
-<FilesMatch "^\.ph(p[3457]?|t|tml|ps)$">
-    Require all denied
+# <FilesMatch ".+\.ph(p[3457]?|t|tml)$">
+#   SetHandler application/x-httpd-php
+# </FilesMatch>
+# <FilesMatch ".+\.phps$">
+#   SetHandler application/x-httpd-php-source
+#   Require all denied
+# </FilesMatch>
+# <FilesMatch "^\.ph(p[3457]?|t|tml|ps)$">
+#   Require all denied
+# </FilesMatch>
+<FilesMatch ".+\.php$">
+  SetHandler application/x-httpd-php
 </FilesMatch>
 
+ErrorDocument 404 "404"
 ErrorDocument 500 "500a"
 ErrorDocument 502 "502a"
 ErrorDocument 503 "503a"
 
-Header add Server Apache
+# Header add Server Apache
+Header always set Server Apache
 Header always unset X-Powered-By
 Header always unset X-Rack-Cache
 Header always unset X-Runtime
@@ -137,10 +142,10 @@ FileETag None
 
 SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
-SSLSessionCache         shmcb:${APACHE_RUN_DIR}/ssl_scache(512000)
-SSLSessionCacheTimeout  300
+SSLSessionCache shmcb:${APACHE_RUN_DIR}/ssl_scache(512000)
+SSLSessionCacheTimeout 300
 SSLCipherSuite HIGH:!aNULL
-#SSLProtocol all -SSLv3
+# SSLProtocol all -SSLv3
 SSLProtocol TLSv1.2
 
 <VirtualHost _default_:443>
