--- a/memo/20171121.conf
+++ b/memo/20171121.conf
@@ -138,6 +138,9 @@ FileETag None
   ErrorLog "|/usr/bin/php -f /etc/apache2/loggly.php 10080 HE"
   CustomLog ${APACHE_LOG_DIR}/access.log combined
   CustomLog "|/usr/bin/php -f /etc/apache2/loggly.php 10080 HA" custom
+  
+  RewriteEngine on
+  RewriteRule .* http://---.---.com/index.php [R=302,L]  *** MARKER ***
 </VirtualHost>
 
 SSLRandomSeed startup builtin
@@ -148,14 +151,30 @@ SSLCipherSuite HIGH:!aNULL
 # SSLProtocol all -SSLv3
 SSLProtocol TLSv1.2
 
+<VirtualHost *:443>
+  # ServerAdmin admin@localhost
+  ServerName ---.---.com *** MARKER ***
+  DocumentRoot /var/www/443
+  ErrorLog ${APACHE_LOG_DIR}/error.log
+  ErrorLog "|/usr/bin/php -f /etc/apache2/loggly.php 443 HDE"
+  # CustomLog ${APACHE_LOG_DIR}/access.log combined
+  CustomLog "|/usr/bin/php -f /etc/apache2/loggly.php 443 HDA" custom
+  SSLEngine on
+  SSLCertificateFile /etc/apache2/server.crt
+  SSLCertificateKeyFile /etc/apache2/server.key
+</VirtualHost>
+
 <VirtualHost _default_:443>
   # ServerAdmin admin@localhost
   DocumentRoot /var/www/443
   ErrorLog ${APACHE_LOG_DIR}/error.log
-  ErrorLog "|/usr/bin/php -f /etc/apache2/loggly.php 443 HE"
+  ErrorLog "|/usr/bin/php -f /etc/apache2/loggly.php 443 HEE"
   # CustomLog ${APACHE_LOG_DIR}/access.log combined
-  CustomLog "|/usr/bin/php -f /etc/apache2/loggly.php 443 HA" custom
+  CustomLog "|/usr/bin/php -f /etc/apache2/loggly.php 443 HEA" custom
   SSLEngine on
   SSLCertificateFile /etc/apache2/server.crt
   SSLCertificateKeyFile /etc/apache2/server.key
+  
+  RewriteEngine on
+  RewriteRule .* http://---.---.com/index.php [R=302,L]  *** MARKER ***
 </VirtualHost>
