--- a/memo/20171121.conf
+++ b/memo/20171121.conf
@@ -80,8 +80,8 @@ AddLanguage ja .ja
 AddCharset us-ascii .ascii .us-ascii
 AddCharset ISO-2022-JP .iso2022-jp .jis
 AddCharset UTF-8 .utf8
-AddCharset euc-jp .euc-jp
-AddCharset shift_jis .shift_jis .sjis
+# AddCharset euc-jp .euc-jp
+# AddCharset shift_jis .shift_jis .sjis
 
 StartServers 1
 MinSpareServers 1
