--- a/memo/20171121.conf
+++ b/memo/20171121.conf
@@ -134,9 +134,9 @@ FileETag None
 <VirtualHost *:10080>
   # ServerAdmin admin@localhost
   DocumentRoot /var/www/10080
-  ErrorLog ${APACHE_LOG_DIR}/error.log
+  # ErrorLog ${APACHE_LOG_DIR}/error.log
   ErrorLog "|/usr/bin/php -f /etc/apache2/loggly.php 10080 HE"
-  CustomLog ${APACHE_LOG_DIR}/access.log combined
+  # CustomLog ${APACHE_LOG_DIR}/access.log combined
   CustomLog "|/usr/bin/php -f /etc/apache2/loggly.php 10080 HA" custom
   
   RewriteEngine on
@@ -167,7 +167,7 @@ SSLProtocol TLSv1.2
 <VirtualHost _default_:443>
   # ServerAdmin admin@localhost
   DocumentRoot /var/www/443
-  ErrorLog ${APACHE_LOG_DIR}/error.log
+  # ErrorLog ${APACHE_LOG_DIR}/error.log
   ErrorLog "|/usr/bin/php -f /etc/apache2/loggly.php 443 HEE"
   # CustomLog ${APACHE_LOG_DIR}/access.log combined
   CustomLog "|/usr/bin/php -f /etc/apache2/loggly.php 443 HEA" custom
