--- a/memo/20171121.conf
+++ b/memo/20171121.conf
@@ -78,7 +78,7 @@ AddLanguage en .en
 AddLanguage ja .ja
 
 AddCharset us-ascii .ascii .us-ascii
-AddCharset ISO-2022-JP .iso2022-jp .jis
+# AddCharset ISO-2022-JP .iso2022-jp .jis
 AddCharset UTF-8 .utf8
 # AddCharset euc-jp .euc-jp
 # AddCharset shift_jis .shift_jis .sjis
