--- a/memo/20171121.conf
+++ b/memo/20171121.conf
@@ -5,7 +5,7 @@ PidFile ${APACHE_PID_FILE}
 Listen 0.0.0.0:80
 Listen 0.0.0.0:10080
 Listen 0.0.0.0:443
-Timeout 25
+Timeout 60
 KeepAlive On
 MaxKeepAliveRequests 100
 KeepAliveTimeout 5
@@ -30,6 +30,7 @@ LoadModule mime_module /usr/lib/apache2/modules/mod_mime.so
 LoadModule negotiation_module /usr/lib/apache2/modules/mod_negotiation.so
 LoadModule socache_shmcb_module /usr/lib/apache2/modules/mod_socache_shmcb.so
 LoadModule ssl_module /usr/lib/apache2/modules/mod_ssl.so
+LoadModule rewrite_module /usr/lib/apache2/modules/mod_rewrite.so
 LoadModule php7_module /usr/lib/apache2/modules/libphp7.0.so
 
 ErrorLog ${APACHE_LOG_DIR}/error.log
@@ -38,20 +39,20 @@ ErrorLog ${APACHE_LOG_DIR}/error.log
 LogLevel warn
 
 <Directory />
-  Options FollowSymLinks
-  AllowOverride None
-  Require all denied
+        Options FollowSymLinks
+        AllowOverride None
+        Require all denied
 </Directory>
 
 <Directory /var/www/>
-  Options Indexes FollowSymLinks
-  AllowOverride None
-  Require all granted
+        Options Indexes FollowSymLinks
+        AllowOverride None
+        Require all granted
 </Directory>
 
 # AccessFileName .htaccess
 <FilesMatch "^\.ht">
-  Require all denied
+        Require all denied
 </FilesMatch>
 
 LogFormat "%v:%p %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" vhost_combined
@@ -77,11 +78,11 @@ TypesConfig /etc/mime.types
 AddLanguage en .en
 AddLanguage ja .ja
 
-AddCharset us-ascii .ascii .us-ascii
+AddCharset us-ascii     .ascii .us-ascii
 # AddCharset ISO-2022-JP .iso2022-jp .jis
-AddCharset UTF-8 .utf8
-# AddCharset euc-jp .euc-jp
-# AddCharset shift_jis .shift_jis .sjis
+AddCharset UTF-8           .utf8
+# AddCharset euc-jp       .euc-jp
+# AddCharset shift_jis   .shift_jis .sjis
 
 StartServers 1
 MinSpareServers 1
@@ -94,14 +95,14 @@ LanguagePriority en ja
 CustomLog ${APACHE_LOG_DIR}/other_vhosts_access.log vhost_combined
 
 # <FilesMatch ".+\.ph(p[3457]?|t|tml)$">
-#   SetHandler application/x-httpd-php
+#     SetHandler application/x-httpd-php
 # </FilesMatch>
 # <FilesMatch ".+\.phps$">
-#   SetHandler application/x-httpd-php-source
-#   Require all denied
+#     SetHandler application/x-httpd-php-source
+#     Require all denied
 # </FilesMatch>
 # <FilesMatch "^\.ph(p[3457]?|t|tml|ps)$">
-#   Require all denied
+#     Require all denied
 # </FilesMatch>
 <FilesMatch ".+\.php$">
   SetHandler application/x-httpd-php
@@ -138,43 +139,27 @@ FileETag None
   ErrorLog "|/usr/bin/php -f /etc/apache2/loggly.php 10080 HE"
   # CustomLog ${APACHE_LOG_DIR}/access.log combined
   CustomLog "|/usr/bin/php -f /etc/apache2/loggly.php 10080 HA" custom
-  
+
   RewriteEngine on
-  RewriteRule .* http://---.---.com/index.php [R=302,L]  *** MARKER ***
+  RewriteRule .* http://fw-hp.herokuapp.com/index.php [R=302,L]
 </VirtualHost>
 
 SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
-SSLSessionCache shmcb:${APACHE_RUN_DIR}/ssl_scache(512000)
-SSLSessionCacheTimeout 300
+SSLSessionCache         shmcb:${APACHE_RUN_DIR}/ssl_scache(512000)
+SSLSessionCacheTimeout  300
 SSLCipherSuite HIGH:!aNULL
-# SSLProtocol all -SSLv3
+#SSLProtocol all -SSLv3
 SSLProtocol TLSv1.2
-
-<VirtualHost *:443>
-  # ServerAdmin admin@localhost
-  ServerName ---.---.com *** MARKER ***
-  DocumentRoot /var/www/443
-  ErrorLog ${APACHE_LOG_DIR}/error.log
-  ErrorLog "|/usr/bin/php -f /etc/apache2/loggly.php 443 HDE"
-  # CustomLog ${APACHE_LOG_DIR}/access.log combined
-  CustomLog "|/usr/bin/php -f /etc/apache2/loggly.php 443 HDA" custom
-  SSLEngine on
-  SSLCertificateFile /etc/apache2/server.crt
-  SSLCertificateKeyFile /etc/apache2/server.key
-</VirtualHost>
 
 <VirtualHost _default_:443>
   # ServerAdmin admin@localhost
   DocumentRoot /var/www/443
-  # ErrorLog ${APACHE_LOG_DIR}/error.log
-  ErrorLog "|/usr/bin/php -f /etc/apache2/loggly.php 443 HEE"
+  ErrorLog ${APACHE_LOG_DIR}/error.log
+  ErrorLog "|/usr/bin/php -f /etc/apache2/loggly.php 443 HE"
   # CustomLog ${APACHE_LOG_DIR}/access.log combined
-  CustomLog "|/usr/bin/php -f /etc/apache2/loggly.php 443 HEA" custom
+  CustomLog "|/usr/bin/php -f /etc/apache2/loggly.php 443 HA" custom
   SSLEngine on
   SSLCertificateFile /etc/apache2/server.crt
   SSLCertificateKeyFile /etc/apache2/server.key
-  
-  RewriteEngine on
-  RewriteRule .* http://---.---.com/index.php [R=302,L]  *** MARKER ***
 </VirtualHost>
