--- a/memo/20171121.conf
+++ b/memo/20171121.conf
@@ -141,7 +141,7 @@ FileETag None
   CustomLog "|/usr/bin/php -f /etc/apache2/loggly.php 10080 HA" custom
 
   RewriteEngine on
-  RewriteRule .* http://fw-hp.herokuapp.com/index.php [R=302,L]
+  RewriteRule .* http://---.---.com/index.php [R=302,L]
 </VirtualHost>
 
 SSLRandomSeed startup builtin
