--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -3,12 +3,13 @@
 DefaultRuntimeDir ${APACHE_RUN_DIR}
 PidFile ${APACHE_PID_FILE}
 Listen 0.0.0.0:80
-Listen 0.0.0.0:10080
+Listen 0.0.0.0:10080 http
 Listen 0.0.0.0:443
 Timeout 60
-KeepAlive On
-MaxKeepAliveRequests 100
-KeepAliveTimeout 5
+# KeepAlive On
+# MaxKeepAliveRequests 100
+# KeepAliveTimeout 5
+KeepAlive Off
 User ${APACHE_RUN_USER}
 Group ${APACHE_RUN_GROUP}
 HostnameLookups Off
