--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -34,7 +34,6 @@ LoadModule ssl_module /usr/lib/apache2/modules/mod_ssl.so
 LoadModule php7_module /usr/lib/apache2/modules/libphp7.0.so
 
 ErrorLog ${APACHE_LOG_DIR}/error.log
-# ErrorLog  "|/usr/bin/logger -p local6.info -t httpd_error"
 
 LogLevel warn
 
@@ -66,11 +65,6 @@ SetOutputFilter DEFLATE
 SetEnvIfNoCase Request_URI \.(?:gif|jpe?g|png|ico)$ no-gzip dont-vary
 Header append Vary User-Agent env=!dont-vary
 
-# ★
-# RewriteEngine On
-# RewriteCond %{HTTPS} off
-# RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
-
 DirectoryIndex index.html index.php
 TypesConfig /etc/mime.types
 
@@ -78,10 +72,10 @@ AddLanguage en .en
 AddLanguage ja .ja
 
 AddCharset us-ascii	.ascii .us-ascii
-AddCharset ISO-2022-JP .iso2022-jp .jis
-AddCharset UTF-8	   .utf8
-AddCharset euc-jp	  .euc-jp
-AddCharset shift_jis   .shift_jis .sjis
+# AddCharset ISO-2022-JP .iso2022-jp .jis
+AddCharset UTF-8 .utf8
+# AddCharset euc-jp .euc-jp
+# AddCharset shift_jis .shift_jis .sjis
 
 StartServers 1
 MinSpareServers 1
@@ -151,9 +145,4 @@ SSLProtocol TLSv1.2
   SSLCertificateFile /etc/apache2/server.crt
   SSLCertificateKeyFile /etc/apache2/server.key
   
-  # ProxyPass /mail/ http://192.168.1.21:30080/mail/ retry=1
-  # ProxyPassReverse /mail/ http://192.168.1.21:30080/mail/
-  # ProxyPass /ml/ http://192.168.1.21:30080/mail/+pop.__DELEGATE_EMAIL_ACCOUNT__.__DELEGATE_POP_SERVER__/ retry=1
-  # ProxyPassReverse /ml/ http://192.168.1.21:30080/mail/+pop.__DELEGATE_EMAIL_ACCOUNT__.__DELEGATE_POP_SERVER__/
-  # ProxyMaxForwards 10
 </VirtualHost>
