--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -1,6 +1,6 @@
 # Apache 2.4
 
-DefaultRuntimeDir ${APACHE_RUN_DIR}
+DefaultRuntimeDir /var/run/apache2/
 PidFile ${APACHE_PID_FILE}
 Listen 0.0.0.0:80
 Listen 0.0.0.0:10080 http
@@ -33,7 +33,7 @@ LoadModule socache_shmcb_module /usr/lib/apache2/modules/mod_socache_shmcb.so
 LoadModule ssl_module /usr/lib/apache2/modules/mod_ssl.so
 LoadModule php7_module /usr/lib/apache2/modules/libphp7.0.so
 
-ErrorLog ${APACHE_LOG_DIR}/error.log
+ErrorLog /var/log/apache2/error.log
 
 LogLevel warn
 
@@ -116,21 +116,21 @@ FileETag None
 <VirtualHost *:80>
   # ServerAdmin admin@localhost
   DocumentRoot /var/www/80
-  ErrorLog ${APACHE_LOG_DIR}/error.log
-  CustomLog ${APACHE_LOG_DIR}/access.log combined
+  ErrorLog /var/log/apache2/error.log
+  CustomLog /var/log/apache2/access.log combined
   # CustomLog "|/usr/bin/logger -p local5.info -t httpd_access_80" combined
 </VirtualHost>
 
 <VirtualHost *:10080>
   # ServerAdmin admin@localhost
   DocumentRoot /var/www/10080
-  ErrorLog ${APACHE_LOG_DIR}/error.log
-  CustomLog ${APACHE_LOG_DIR}/access.log combined
+  ErrorLog /var/log/apache2/error.log
+  CustomLog /var/log/apache2/access.log combined
 </VirtualHost>
 
 SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
-SSLSessionCache		shmcb:${APACHE_RUN_DIR}/ssl_scache(512000)
+SSLSessionCache		shmcb:/var/run/apache2/ssl_scache(512000)
 SSLSessionCacheTimeout  300
 SSLCipherSuite HIGH:!aNULL
 #SSLProtocol all -SSLv3
@@ -139,8 +139,8 @@ SSLProtocol TLSv1.2
 <VirtualHost _default_:443>
   # ServerAdmin admin@localhost
   DocumentRoot /var/www/443
-  ErrorLog ${APACHE_LOG_DIR}/error.log
-  CustomLog ${APACHE_LOG_DIR}/access.log combined
+  ErrorLog /var/log/apache2/error.log
+  CustomLog /var/log/apache2/access.log combined
   SSLEngine on
   SSLCertificateFile /etc/apache2/server.crt
   SSLCertificateKeyFile /etc/apache2/server.key
