--- a/apache24/sample2.conf
+++ b/apache24/sample2.conf
@@ -6,10 +6,6 @@ Listen 0.0.0.0:80
 Listen 0.0.0.0:10080 http
 Listen 0.0.0.0:443
 Timeout 60
-# KeepAlive On
-# MaxKeepAliveRequests 100
-# KeepAliveTimeout 5
-KeepAlive Off
 User ${APACHE_RUN_USER}
 Group ${APACHE_RUN_GROUP}
 HostnameLookups Off
@@ -56,9 +52,6 @@ LogLevel warn
 
 LogFormat "%v:%p %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" vhost_combined
 LogFormat "%h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
-# LogFormat "%h %l %u %t \"%r\" %>s %O" common
-# LogFormat "%{Referer}i -> %U" referer
-# LogFormat "%{User-agent}i" agent
 
 DeflateCompressionLevel 1
 SetOutputFilter DEFLATE
@@ -72,34 +65,22 @@ AddLanguage en .en
 AddLanguage ja .ja
 
 AddCharset us-ascii	.ascii .us-ascii
-# AddCharset ISO-2022-JP .iso2022-jp .jis
 AddCharset UTF-8 .utf8
-# AddCharset euc-jp .euc-jp
-# AddCharset shift_jis .shift_jis .sjis
 
-StartServers 1
-MinSpareServers 1
-MaxSpareServers 10
-MaxRequestWorkers 150
-MaxConnectionsPerChild 0
+# StartServers 1
+# MinSpareServers 1
+# MaxSpareServers 10
+# MaxRequestWorkers 150
+# MaxConnectionsPerChild 0
 
 LanguagePriority en ja	
 
 CustomLog ${APACHE_LOG_DIR}/other_vhosts_access.log vhost_combined
 
-<FilesMatch ".+\.ph(p[3457]?|t|tml)$">
+<FilesMatch ".+\.php$">
     SetHandler application/x-httpd-php
 </FilesMatch>
-<FilesMatch ".+\.phps$">
-    SetHandler application/x-httpd-php-source
-    Require all denied
-</FilesMatch>
-<FilesMatch "^\.ph(p[3457]?|t|tml|ps)$">
-    Require all denied
-</FilesMatch>
 
-# ★
-# ErrorDocument 502 /502.html
 ErrorDocument 404 "404a"
 ErrorDocument 500 "500a"
 ErrorDocument 502 "502a"
@@ -114,11 +95,10 @@ Header unset ETag
 FileETag None
 
 <VirtualHost *:80>
-  # ServerAdmin admin@localhost
   DocumentRoot /var/www/80
-  ErrorLog /var/log/apache2/error.log
-  CustomLog /var/log/apache2/access.log combined
-  # CustomLog "|/usr/bin/logger -p local5.info -t httpd_access_80" combined
+  ErrorLog /var/log/apache2/httpd_error_80.log
+  ErrorLog "|/usr/bin/logger -p local0.info -t httpd_error_80" combined
+  CustomLog /dev/null common env=0
 </VirtualHost>
 
 <VirtualHost *:10080>
