--- a/apache24/sample2.conf
+++ b/apache24/sample2.conf
@@ -97,30 +97,35 @@ FileETag None
 <VirtualHost *:80>
   DocumentRoot /var/www/80
   ErrorLog /var/log/apache2/httpd_error_80.log
-  ErrorLog "|/usr/bin/logger -p local0.info -t httpd_error_80" combined
+  ErrorLog "|/usr/bin/logger -p local0.info -t httpd_error_80"
   CustomLog /dev/null common env=0
 </VirtualHost>
 
 <VirtualHost *:10080>
-  # ServerAdmin admin@localhost
   DocumentRoot /var/www/10080
-  ErrorLog /var/log/apache2/error.log
+  ErrorLog /var/log/apache2/httpd_error_10080.log
+  ErrorLog "|/usr/bin/logger -p local0.info -t httpd_error_10080"
   CustomLog /var/log/apache2/access.log combined
+  CustomLog "|/usr/bin/logger -p local0.info -t httpd_access_10080" vhost_combined
+  
+  RewriteEngine on
+  RewriteRule ^.*$ http://xxx/ [R=302,L]
 </VirtualHost>
 
 SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
-SSLSessionCache		shmcb:/var/run/apache2/ssl_scache(512000)
-SSLSessionCacheTimeout  300
+SSLSessionCache shmcb:/var/run/apache2/ssl_scache(512000)
+SSLSessionCacheTimeout 300
 SSLCipherSuite HIGH:!aNULL
-#SSLProtocol all -SSLv3
 SSLProtocol TLSv1.2
 
 <VirtualHost _default_:443>
-  # ServerAdmin admin@localhost
   DocumentRoot /var/www/443
-  ErrorLog /var/log/apache2/error.log
-  CustomLog /var/log/apache2/access.log combined
+  ErrorLog /var/log/apache2/httpd_error_443.log
+  ErrorLog "|/usr/bin/logger -p local0.info -t httpd_error_443"
+  CustomLog /var/log/apache2/httpd_access_443.log vhost_combined
+  CustomLog "|/usr/bin/logger -p local0.info -t httpd_access_443" vhost_combined
+  
   SSLEngine on
   SSLCertificateFile /etc/apache2/server.crt
   SSLCertificateKeyFile /etc/apache2/server.key
