--- a/apache24/sample2.conf
+++ b/apache24/sample2.conf
@@ -96,6 +96,7 @@ FileETag None
 
 <VirtualHost *:80>
   DocumentRoot /var/www/80
+  KeepAlive On
   ErrorLog /var/log/apache2/httpd_error_80.log
   ErrorLog "|/usr/bin/logger -p local0.info -t httpd_error_80"
   CustomLog /dev/null common env=0
@@ -103,6 +104,7 @@ FileETag None
 
 <VirtualHost *:10080>
   DocumentRoot /var/www/10080
+  KeepAlive Off
   ErrorLog /var/log/apache2/httpd_error_10080.log
   ErrorLog "|/usr/bin/logger -p local0.info -t httpd_error_10080"
   CustomLog /var/log/apache2/access.log combined
@@ -121,6 +123,7 @@ SSLProtocol TLSv1.2
 
 <VirtualHost _default_:443>
   DocumentRoot /var/www/443
+  KeepAlive Off
   ErrorLog /var/log/apache2/httpd_error_443.log
   ErrorLog "|/usr/bin/logger -p local0.info -t httpd_error_443"
   CustomLog /var/log/apache2/httpd_access_443.log vhost_combined
