--- a/apache24/sample2.conf
+++ b/apache24/sample2.conf
@@ -111,7 +111,7 @@ FileETag None
   CustomLog "|/usr/bin/logger -p local0.info -t httpd_access_10080" vhost_combined
   
   RewriteEngine on
-  RewriteRule ^.*$ http://xxx/ [R=302,L]
+  RewriteRule ^.*$ http://xxx/ [R=302,L] *****
 </VirtualHost>
 
 SSLRandomSeed startup builtin
@@ -133,4 +133,10 @@ SSLProtocol TLSv1.2
   SSLCertificateFile /etc/apache2/server.crt
   SSLCertificateKeyFile /etc/apache2/server.key
   
+  RewriteEngine on
+  RewriteCond %{REQUEST_URI} ^.*/ttrss/.*$
+  RewriteRule ^.*$ - [F,L]
+  RewriteCond %{REQUEST_URI} ^.*/ttrss2/.*$
+  RewriteRule ^.*$ - [F,L]
+  RewriteRule ^.*$ http://xxx/ [R=302,L] *****
 </VirtualHost>
