--- a/apache24/sample2.conf
+++ b/apache24/sample2.conf
@@ -16,7 +16,8 @@ ServerAdmin admin@localhost
 UseCanonicalName Off
 ServerName localhost
 
-LoadModule mpm_prefork_module /usr/lib/apache2/modules/mod_mpm_prefork.so
+# LoadModule mpm_prefork_module /usr/lib/apache2/modules/mod_mpm_prefork.so
+LoadModule mpm_event_module /usr/lib/apache2/modules/mod_mpm_event.so
 LoadModule authz_core_module /usr/lib/apache2/modules/mod_authz_core.so
 LoadModule filter_module /usr/lib/apache2/modules/mod_filter.so
 LoadModule deflate_module /usr/lib/apache2/modules/mod_deflate.so
@@ -27,6 +28,8 @@ LoadModule mime_module /usr/lib/apache2/modules/mod_mime.so
 LoadModule negotiation_module /usr/lib/apache2/modules/mod_negotiation.so
 LoadModule socache_shmcb_module /usr/lib/apache2/modules/mod_socache_shmcb.so
 LoadModule ssl_module /usr/lib/apache2/modules/mod_ssl.so
+LoadModule rewrite_module /usr/lib/apache2/modules/mod_rewrite.so
+LoadModule http2_module /usr/lib/apache2/modules/mod_http2.so
 LoadModule php7_module /usr/lib/apache2/modules/libphp7.0.so
 
 ErrorLog /var/log/apache2/error.log
@@ -34,24 +37,25 @@ ErrorLog /var/log/apache2/error.log
 LogLevel warn
 
 <Directory />
-	Options FollowSymLinks
-	AllowOverride None
-	Require all denied
+  Options FollowSymLinks
+  AllowOverride None
+  Require all denied
 </Directory>
 
 <Directory /var/www/>
-	Options Indexes FollowSymLinks
-	AllowOverride None
-	Require all granted
+  Options Indexes FollowSymLinks
+  AllowOverride None
+  Require all granted
 </Directory>
 
 # AccessFileName .htaccess
 <FilesMatch "^\.ht">
-	Require all denied
+  Require all denied
 </FilesMatch>
 
 LogFormat "%v:%p %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" vhost_combined
 LogFormat "%h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
+LogFormat "%>s %a %{X-Request-Server}i %v %u %H %m %U \"%{User-agent}i\"" custom
 
 DeflateCompressionLevel 1
 SetOutputFilter DEFLATE
@@ -67,18 +71,20 @@ AddLanguage ja .ja
 AddCharset us-ascii	.ascii .us-ascii
 AddCharset UTF-8 .utf8
 
-# StartServers 1
-# MinSpareServers 1
-# MaxSpareServers 10
-# MaxRequestWorkers 150
-# MaxConnectionsPerChild 0
+StartServers 2
+MinSpareThreads 25
+MaxSpareThreads 75
+ThreadLimit 64
+ThreadsPerChild 25
+MaxRequestWorkers 150
+MaxConnectionsPerChild 0
 
 LanguagePriority en ja	
 
 CustomLog ${APACHE_LOG_DIR}/other_vhosts_access.log vhost_combined
 
 <FilesMatch ".+\.php$">
-    SetHandler application/x-httpd-php
+  SetHandler application/x-httpd-php
 </FilesMatch>
 
 ErrorDocument 404 "404a"
@@ -86,7 +92,8 @@ ErrorDocument 500 "500a"
 ErrorDocument 502 "502a"
 ErrorDocument 503 "503a"
 
-Header add Server Apache
+# Header add Server Apache
+Header always set Server Apache
 Header always unset X-Powered-By
 Header always unset X-Rack-Cache
 Header always unset X-Runtime
@@ -109,6 +116,7 @@ FileETag None
   ErrorLog "|/usr/bin/logger -p local0.info -t httpd_error_10080"
   CustomLog /var/log/apache2/access.log combined
   CustomLog "|/usr/bin/logger -p local0.info -t httpd_access_10080" vhost_combined
+  CustomLog "|/usr/bin/php -f /etc/apache2/loggly_relay.php 10080 HA" custom
   
   RewriteEngine on
   RewriteRule ^.*$ http://xxx/ [R=302,L] *****
@@ -133,10 +141,12 @@ SSLProtocol TLSv1.2
   SSLCertificateFile /etc/apache2/server.crt
   SSLCertificateKeyFile /etc/apache2/server.key
   
+  Protocols h2 http/1.1
+  
   RewriteEngine on
-  RewriteCond %{REQUEST_URI} ^.*/ttrss/.*$
+  RewriteCond %{REQUEST_URI} ^/ttrss/.*$
   RewriteRule ^.*$ - [F,L]
-  RewriteCond %{REQUEST_URI} ^.*/ttrss2/.*$
+  RewriteCond %{REQUEST_URI} ^/ttrss2/.*$
   RewriteRule ^.*$ - [F,L]
   RewriteRule ^.*$ http://xxx/ [R=302,L] *****
 </VirtualHost>
