--- a/apache24/sample2.conf
+++ b/apache24/sample2.conf
@@ -144,8 +144,8 @@ SSLProtocol TLSv1.2
   
   RewriteEngine on
   RewriteCond %{REQUEST_URI} ^/ttrss/.*$
-  RewriteRule ^.*$ - [F,L]
+  RewriteRule ^.*$ - [L]
   RewriteCond %{REQUEST_URI} ^/ttrss2/.*$
-  RewriteRule ^.*$ - [F,L]
+  RewriteRule ^.*$ - [L]
   RewriteRule ^.*$ http://xxx/ [R=302,L] *****
 </VirtualHost>
