--- a/apache24/sample2.conf
+++ b/apache24/sample2.conf
@@ -31,6 +31,7 @@ LoadModule ssl_module /usr/lib/apache2/modules/mod_ssl.so
 LoadModule rewrite_module /usr/lib/apache2/modules/mod_rewrite.so
 LoadModule http2_module /usr/lib/apache2/modules/mod_http2.so
 LoadModule php7_module /usr/lib/apache2/modules/libphp7.0.so
+# Apache is running a threaded MPM, but your PHP Module is not compiled to be threadsafe.  You need to recompile PHP.
 
 ErrorLog /var/log/apache2/error.log
 
