--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -5,6 +5,7 @@ PidFile ${APACHE_PID_FILE}
 Listen 0.0.0.0:80
 Listen 0.0.0.0:10080 http
 Listen 0.0.0.0:443
+Listen 0.0.0.0:10443 https
 Timeout 60
 # KeepAlive On
 # MaxKeepAliveRequests 100
@@ -31,7 +32,9 @@ LoadModule mime_module /usr/lib/apache2/modules/mod_mime.so
 LoadModule negotiation_module /usr/lib/apache2/modules/mod_negotiation.so
 LoadModule socache_shmcb_module /usr/lib/apache2/modules/mod_socache_shmcb.so
 LoadModule ssl_module /usr/lib/apache2/modules/mod_ssl.so
+LoadModule rewrite_module /usr/lib/apache2/modules/mod_rewrite.so
 LoadModule php7_module /usr/lib/apache2/modules/libphp7.0.so
+LoadModule http2_module /usr/lib/apache2/modules/mod_http2.so
 
 ErrorLog /var/log/apache2/error.log
 
@@ -59,10 +62,12 @@ LogFormat "%h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combine
 # LogFormat "%h %l %u %t \"%r\" %>s %O" common
 # LogFormat "%{Referer}i -> %U" referer
 # LogFormat "%{User-agent}i" agent
+LogFormat "%>s %a %{X-Request-Server}i %{X-Key}i %v %u %H %m %U \"%{User-agent}i\" %{Content-Encoding}o" custom
 
 DeflateCompressionLevel 1
 SetOutputFilter DEFLATE
-SetEnvIfNoCase Request_URI \.(?:gif|jpe?g|png|ico)$ no-gzip dont-vary
+# SetEnvIfNoCase Request_URI \.(?:gif|jpe?g|png|ico)$ no-gzip dont-vary
+SetEnvIfNoCase Request_URI \.(?:gif|jpe?g|png)$ no-gzip dont-vary
 Header append Vary User-Agent env=!dont-vary
 
 DirectoryIndex index.html index.php
@@ -83,19 +88,12 @@ MaxSpareServers 10
 MaxRequestWorkers 150
 MaxConnectionsPerChild 0
 
-LanguagePriority en ja	
+LanguagePriority en ja
 
 CustomLog ${APACHE_LOG_DIR}/other_vhosts_access.log vhost_combined
 
-<FilesMatch ".+\.ph(p[3457]?|t|tml)$">
-    SetHandler application/x-httpd-php
-</FilesMatch>
-<FilesMatch ".+\.phps$">
-    SetHandler application/x-httpd-php-source
-    Require all denied
-</FilesMatch>
-<FilesMatch "^\.ph(p[3457]?|t|tml|ps)$">
-    Require all denied
+<FilesMatch ".+\.php$">
+  SetHandler application/x-httpd-php
 </FilesMatch>
 
 # ★
@@ -105,7 +103,7 @@ ErrorDocument 500 "500a"
 ErrorDocument 502 "502a"
 ErrorDocument 503 "503a"
 
-Header add Server Apache
+Header always set Server Apache
 Header always unset X-Powered-By
 Header always unset X-Rack-Cache
 Header always unset X-Runtime
