--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -112,18 +112,22 @@ Header unset ETag
 FileETag None
 
 <VirtualHost *:80>
-  # ServerAdmin admin@localhost
   DocumentRoot /var/www/80
+  KeepAlive On
   ErrorLog /var/log/apache2/error.log
-  CustomLog /var/log/apache2/access.log combined
-  # CustomLog "|/usr/bin/logger -p local5.info -t httpd_access_80" combined
+  CustomLog /dev/null common env=0
 </VirtualHost>
 
 <VirtualHost *:10080>
-  # ServerAdmin admin@localhost
   DocumentRoot /var/www/10080
+  KeepAlive Off
   ErrorLog /var/log/apache2/error.log
+  ErrorLog "|/usr/bin/php -f /etc/apache2/loggly.php 10080 HE"
   CustomLog /var/log/apache2/access.log combined
+  CustomLog "|/usr/bin/php -f /etc/apache2/loggly_relay.php 10080 HA" custom
+  
+  RewriteEngine on
+  RewriteRule .* http://xxx.herokuapp.com/index.php [R=302,L]
 </VirtualHost>
 
 SSLRandomSeed startup builtin
