--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -139,12 +139,21 @@ SSLCipherSuite HIGH:!aNULL
 SSLProtocol TLSv1.2
 
 <VirtualHost _default_:443>
-  # ServerAdmin admin@localhost
   DocumentRoot /var/www/443
+  ServerName xxx.xxx.xxx
   ErrorLog /var/log/apache2/error.log
-  CustomLog /var/log/apache2/access.log combined
+  ErrorLog "|/usr/bin/php -f /etc/apache2/loggly.php 443 HE"
+  CustomLog "|/usr/bin/php -f /etc/apache2/loggly2.php 443 HA" custom
+  
   SSLEngine on
   SSLCertificateFile /etc/apache2/server.crt
   SSLCertificateKeyFile /etc/apache2/server.key
   
+  Protocols h2 http/1.1
+  
+  RewriteEngine on
+  RewriteCond %{HTTP:X-Key} xxx.xxx.xxx
+  RewriteCond %{REQUEST_URI} ^/ttrss/.*
+  RewriteRule ^(.*)$ - [L]
+  RewriteRule .* https://xxx.herokuapp.com/index.php [R=302,L]
 </VirtualHost>
