--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -96,8 +96,6 @@ CustomLog ${APACHE_LOG_DIR}/other_vhosts_access.log vhost_combined
   SetHandler application/x-httpd-php
 </FilesMatch>
 
-# ★
-# ErrorDocument 502 /502.html
 ErrorDocument 404 "404a"
 ErrorDocument 500 "500a"
 ErrorDocument 502 "502a"
@@ -157,3 +155,24 @@ SSLProtocol TLSv1.2
   RewriteRule ^(.*)$ - [L]
   RewriteRule .* https://xxx.herokuapp.com/index.php [R=302,L]
 </VirtualHost>
+
+<VirtualHost _default_:10443>
+  DocumentRoot /var/www/10443
+  ServerName xxx.xxx.xxx
+  ErrorLog /var/log/apache2/error.log
+  ErrorLog "|/usr/bin/php -f /etc/apache2/loggly.php 10443 HE"
+  CustomLog "|/usr/bin/php -f /etc/apache2/loggly2.php 10443 HA" custom
+  
+  SSLEngine on
+  SSLCertificateFile /etc/apache2/server.crt
+  SSLCertificateKeyFile /etc/apache2/server.key
+  
+  Protocols h2 http/1.1
+  
+  RewriteEngine on
+  RewriteCond %{HTTP:X-Key} xxx.xxx.xxx
+  RewriteCond %{REQUEST_URI} ^/ttrss2/.*
+  RewriteRule ^(.*)$ - [L]
+  RewriteRule .* https://xxx.herokuapp.com/index.php [R=302,L]
+</VirtualHost>
+
