--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -7,9 +7,7 @@ Listen 0.0.0.0:10080 http
 Listen 0.0.0.0:443
 Listen 0.0.0.0:10443 https
 Timeout 60
-# KeepAlive On
-# MaxKeepAliveRequests 100
-# KeepAliveTimeout 5
+
 KeepAlive Off
 User ${APACHE_RUN_USER}
 Group ${APACHE_RUN_GROUP}
@@ -41,20 +39,20 @@ ErrorLog /var/log/apache2/error.log
 LogLevel warn
 
 <Directory />
-	Options FollowSymLinks
-	AllowOverride None
-	Require all denied
+  Options FollowSymLinks
+  AllowOverride None
+  Require all denied
 </Directory>
 
 <Directory /var/www/>
-	Options Indexes FollowSymLinks
-	AllowOverride None
-	Require all granted
+  Options Indexes FollowSymLinks
+  AllowOverride None
+  Require all granted
 </Directory>
 
 # AccessFileName .htaccess
 <FilesMatch "^\.ht">
-	Require all denied
+  Require all denied
 </FilesMatch>
 
 LogFormat "%v:%p %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" vhost_combined
@@ -76,11 +74,8 @@ TypesConfig /etc/mime.types
 AddLanguage en .en
 AddLanguage ja .ja
 
-AddCharset us-ascii	.ascii .us-ascii
-# AddCharset ISO-2022-JP .iso2022-jp .jis
+AddCharset us-ascii .ascii .us-ascii
 AddCharset UTF-8 .utf8
-# AddCharset euc-jp .euc-jp
-# AddCharset shift_jis .shift_jis .sjis
 
 StartServers 1
 MinSpareServers 1
@@ -90,7 +85,7 @@ MaxConnectionsPerChild 0
 
 LanguagePriority en ja
 
-CustomLog ${APACHE_LOG_DIR}/other_vhosts_access.log vhost_combined
+CustomLog /var/log/apache2/other_vhosts_access.log vhost_combined
 
 <FilesMatch ".+\.php$">
   SetHandler application/x-httpd-php
@@ -130,7 +125,7 @@ FileETag None
 
 SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
-SSLSessionCache		shmcb:/var/run/apache2/ssl_scache(512000)
+SSLSessionCache shmcb:/var/run/apache2/ssl_scache(512000)
 SSLSessionCacheTimeout  300
 SSLCipherSuite HIGH:!aNULL
 #SSLProtocol all -SSLv3
@@ -175,4 +170,3 @@ SSLProtocol TLSv1.2
   RewriteRule ^(.*)$ - [L]
   RewriteRule .* https://xxx.herokuapp.com/index.php [R=302,L]
 </VirtualHost>
-
