--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -56,10 +56,7 @@ LogLevel warn
 </FilesMatch>
 
 LogFormat "%v:%p %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" vhost_combined
-LogFormat "%h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
-# LogFormat "%h %l %u %t \"%r\" %>s %O" common
-# LogFormat "%{Referer}i -> %U" referer
-# LogFormat "%{User-agent}i" agent
+# LogFormat "%h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
 LogFormat "%>s %a %{X-Request-Server}i %{X-Key}i %v %u %H %m %U \"%{User-agent}i\" %{Content-Encoding}o" custom
 
 DeflateCompressionLevel 1
