--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -34,7 +34,8 @@ LoadModule rewrite_module /usr/lib/apache2/modules/mod_rewrite.so
 LoadModule php7_module /usr/lib/apache2/modules/libphp7.0.so
 LoadModule http2_module /usr/lib/apache2/modules/mod_http2.so
 
-ErrorLog /var/log/apache2/error.log
+# ErrorLog /var/log/apache2/error.log
+ErrorLog /tmp/apache2_error.log
 
 LogLevel warn
 
@@ -82,7 +83,8 @@ MaxConnectionsPerChild 0
 
 LanguagePriority en ja
 
-CustomLog /var/log/apache2/other_vhosts_access.log vhost_combined
+# CustomLog /var/log/apache2/other_vhosts_access.log vhost_combined
+CustomLog /tmp/apache2_other_vhosts_access.log vhost_combined
 
 <FilesMatch ".+\.php$">
   SetHandler application/x-httpd-php
@@ -104,20 +106,22 @@ FileETag None
 <VirtualHost *:80>
   DocumentRoot /var/www/80
   KeepAlive On
-  ErrorLog /var/log/apache2/error.log
+  # ErrorLog /var/log/apache2/error.log
+  ErrorLog /tmp/apache2_error.log
   CustomLog /dev/null common env=0
 </VirtualHost>
 
 <VirtualHost *:10080>
   DocumentRoot /var/www/10080
   KeepAlive Off
-  ErrorLog /var/log/apache2/error.log
+  # ErrorLog /var/log/apache2/error.log
+  ErrorLog /tmp/apache2_error.log
   ErrorLog "|/usr/bin/php -f /etc/apache2/loggly.php 10080 HE"
-  CustomLog /var/log/apache2/access.log combined
+  # CustomLog /var/log/apache2/access.log combined
   CustomLog "|/usr/bin/php -f /etc/apache2/loggly_relay.php 10080 HA" custom
   
   RewriteEngine on
-  RewriteRule .* http://xxx.herokuapp.com/index.php [R=302,L]
+  RewriteRule .* http://*****.herokuapp.com/index.php [R=302,L]
 </VirtualHost>
 
 SSLRandomSeed startup builtin
@@ -131,7 +135,8 @@ SSLProtocol TLSv1.2
 <VirtualHost _default_:443>
   DocumentRoot /var/www/443
   ServerName xxx.xxx.xxx
-  ErrorLog /var/log/apache2/error.log
+  # ErrorLog /var/log/apache2/error.log
+  ErrorLog /tmp/apache2_error.log
   ErrorLog "|/usr/bin/php -f /etc/apache2/loggly.php 443 HE"
   CustomLog "|/usr/bin/php -f /etc/apache2/loggly2.php 443 HA" custom
   
@@ -145,13 +150,14 @@ SSLProtocol TLSv1.2
   RewriteCond %{HTTP:X-Key} xxx.xxx.xxx
   RewriteCond %{REQUEST_URI} ^/ttrss/.*
   RewriteRule ^(.*)$ - [L]
-  RewriteRule .* https://xxx.herokuapp.com/index.php [R=302,L]
+  RewriteRule .* https://*****.herokuapp.com/index.php [R=302,L]
 </VirtualHost>
 
 <VirtualHost _default_:10443>
   DocumentRoot /var/www/10443
   ServerName xxx.xxx.xxx
-  ErrorLog /var/log/apache2/error.log
+  # ErrorLog /var/log/apache2/error.log
+  ErrorLog /tmp/apache2_error.log
   ErrorLog "|/usr/bin/php -f /etc/apache2/loggly.php 10443 HE"
   CustomLog "|/usr/bin/php -f /etc/apache2/loggly2.php 10443 HA" custom
   
@@ -165,5 +171,5 @@ SSLProtocol TLSv1.2
   RewriteCond %{HTTP:X-Key} xxx.xxx.xxx
   RewriteCond %{REQUEST_URI} ^/ttrss2/.*
   RewriteRule ^(.*)$ - [L]
-  RewriteRule .* https://xxx.herokuapp.com/index.php [R=302,L]
+  RewriteRule .* https://*****.herokuapp.com/index.php [R=302,L]
 </VirtualHost>
