--- a/apache24/sample1.conf
+++ b/apache24/sample1.conf
@@ -34,8 +34,7 @@ LoadModule rewrite_module /usr/lib/apache2/modules/mod_rewrite.so
 LoadModule php7_module /usr/lib/apache2/modules/libphp7.0.so
 LoadModule http2_module /usr/lib/apache2/modules/mod_http2.so
 
-# ErrorLog /var/log/apache2/error.log
-ErrorLog /tmp/apache2_error.log
+ErrorLog /var/log/apache2/error.log
 
 LogLevel warn
 
@@ -83,8 +82,7 @@ MaxConnectionsPerChild 0
 
 LanguagePriority en ja
 
-# CustomLog /var/log/apache2/other_vhosts_access.log vhost_combined
-CustomLog /tmp/apache2_other_vhosts_access.log vhost_combined
+CustomLog /var/log/apache2/other_vhosts_access.log vhost_combined
 
 <FilesMatch ".+\.php$">
   SetHandler application/x-httpd-php
@@ -106,16 +104,14 @@ FileETag None
 <VirtualHost *:80>
   DocumentRoot /var/www/80
   KeepAlive On
-  # ErrorLog /var/log/apache2/error.log
-  ErrorLog /tmp/apache2_error.log
+  ErrorLog /var/log/apache2/error.log
   CustomLog /dev/null common env=0
 </VirtualHost>
 
 <VirtualHost *:10080>
   DocumentRoot /var/www/10080
   KeepAlive Off
-  # ErrorLog /var/log/apache2/error.log
-  ErrorLog /tmp/apache2_error.log
+  ErrorLog /var/log/apache2/error.log
   ErrorLog "|/usr/bin/php -f /etc/apache2/loggly.php 10080 HE"
   # CustomLog /var/log/apache2/access.log combined
   CustomLog "|/usr/bin/php -f /etc/apache2/loggly_relay.php 10080 HA" custom
@@ -135,8 +131,7 @@ SSLProtocol TLSv1.2
 <VirtualHost _default_:443>
   DocumentRoot /var/www/443
   ServerName xxx.xxx.xxx
-  # ErrorLog /var/log/apache2/error.log
-  ErrorLog /tmp/apache2_error.log
+  ErrorLog /var/log/apache2/error.log
   ErrorLog "|/usr/bin/php -f /etc/apache2/loggly.php 443 HE"
   CustomLog "|/usr/bin/php -f /etc/apache2/loggly2.php 443 HA" custom
   
@@ -156,8 +151,7 @@ SSLProtocol TLSv1.2
 <VirtualHost _default_:10443>
   DocumentRoot /var/www/10443
   ServerName xxx.xxx.xxx
-  # ErrorLog /var/log/apache2/error.log
-  ErrorLog /tmp/apache2_error.log
+  ErrorLog /var/log/apache2/error.log
   ErrorLog "|/usr/bin/php -f /etc/apache2/loggly.php 10443 HE"
   CustomLog "|/usr/bin/php -f /etc/apache2/loggly2.php 10443 HA" custom
   
